kubernetes/apps/woodpecker-system/woodpecker/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: woodpecker
spec:
  parentRefs:
    - name: envoy-gateway-local
      namespace: network
      sectionName: https
    - name: envoy-gateway-public
      namespace: network
      sectionName: https
  hostnames:
    - woodpecker.egenintres.se
  rules:
    - backendRefs:
        - name: woodpecker-server
          port: 80
